fix toolbar vertical alignment

--- a/src/scss/components/_toolbar.scss
+++ b/src/scss/components/_toolbar.scss
@@ -24,7 +24,7 @@ $toolbar-text-hover-color: $default-action-color-hover !default;
 // @scss
 
 //
-// 1. Allow us to style box model properties.
+// 1. Allow us to vertically center all content easily.
 // 2. Line different sized buttons up a little nicer.
 // 3. Make buttons inherit font styles (often necessary when styling `input`s as
 //    buttons).
@@ -64,10 +64,12 @@ $toolbar-text-hover-color: $default-action-color-hover !default;
 		-webkit-tap-highlight-color: rgba(0, 0, 0, 0); // google material design
 		color: $toolbar-text-color;
 		position: relative; // google material design
-		display: inline-block; // [1]
+		display: inline-flex; // [1]
 		overflow: hidden; // [6]
+		justify-content: center; // [1]
+		align-items: center; // [1]
 		box-sizing: border-box;
-		height: 36px; // google material design
+		height: 36px; // [1]
 		margin: 0; // [4]
 		padding: 0 ($toolbar-spacing * 2); // [7]
 		user-select: none; // [8]
@@ -102,5 +104,15 @@ $toolbar-text-hover-color: $default-action-color-hover !default;
 		&:hover {
 			text-decoration: none;
 		}
+	}
+
+	&-text + &-icon {
+		margin-right: -($toolbar-spacing / 2);
+		margin-left: $toolbar-spacing;
+	}
+
+	&-icon + &-text {
+		margin-right: $toolbar-spacing;
+		margin-left: -($toolbar-spacing / 2);
 	}
 }
